<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_main"
    app:startDestination="@id/navigation_main">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.badworddetector.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_main"
        android:name="com.example.badworddetector.ui.main.MainFragment"
        android:label="@string/title_main"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.example.badworddetector.ui.about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />
</navigation>