<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="177dp"
        android:layout_height="147dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/icon_app_removebg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="292dp"
        android:layout_height="wrap_content"
        android:gravity="center|center"
        android:text="@string/welcome_login"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@id/logo"
        app:layout_constraintStart_toStartOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/name"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <EditText
        android:id="@+id/name"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center|center"
        android:textColor="@color/black"
        android:textColorHint="@color/white"
        android:background="@drawable/rounded_background"
        app:layout_constraintEnd_toEndOf="@+id/welcome"
        app:layout_constraintStart_toStartOf="@+id/welcome"
        app:layout_constraintTop_toBottomOf="@+id/tvName"
        app:shapeAppearanceOverlay="@style/button" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/name"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <EditText
        android:id="@+id/email"
        app:shapeAppearanceOverlay="@style/button"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:background="@drawable/rounded_background"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center|center"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="@id/tvEmail"
        app:layout_constraintTop_toBottomOf="@id/tvEmail"/>

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="@id/email"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:background="@drawable/rounded_background"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center|center"
        android:password="true"
        android:textColor="@color/black"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="@id/tvPassword"
        app:layout_constraintTop_toBottomOf="@id/tvPassword" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/theme"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/btn_register"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/logo"
        app:layout_constraintStart_toStartOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:shapeAppearanceOverlay="@style/button" />

    <Button
        android:id="@+id/btn_have_account"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/transparent"
        android:text="@string/have_account"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintEnd_toEndOf="@+id/btn_register"
        app:layout_constraintStart_toStartOf="@+id/btn_register"
        app:layout_constraintTop_toBottomOf="@id/btn_register" />

</androidx.constraintlayout.widget.ConstraintLayout>