<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment" >

    <ImageView
        android:id="@+id/iconApp"
        android:layout_width="221dp"
        android:layout_height="194dp"
        android:src="@drawable/icon_badword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012" />

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/input"
        app:layout_constraintStart_toStartOf="@id/input"/>

    <EditText
        android:id="@+id/input"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:background="@drawable/rounded_background"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center|center"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iconApp"
        app:layout_constraintVertical_bias="0.16000003"/>

    <Button
        android:id="@+id/btn_check"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        app:shapeAppearanceOverlay="@style/button"
        android:backgroundTint="@color/theme"
        android:text="@string/btn_check"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input" />

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        app:shapeAppearanceOverlay="@style/button"
        android:backgroundTint="@color/theme"
        android:text="@string/btn_reset"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintBottom_toBottomOf="@id/btn_check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical"
        app:layout_constraintTop_toTopOf="@id/btn_check" />


    <TextView
        android:id="@+id/tvResult"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:gravity="center"
        android:text="@string/result"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/input"
        app:layout_constraintStart_toStartOf="@+id/input"
        app:layout_constraintTop_toBottomOf="@+id/btn_check" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>